--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,13 @@
+#this project was created for Android sample Course
+
 <html>
 <head>
 </head>
 	<body>
-		<h1>"Future future"</h1>
+		<h1>"Hello, World!"</h1>
 	</body>
 
 
 </html>
+
+	it s my project
